@@ -31,17 +31,13 @@ alloc_game_object(char *name, game_obj_type_t obj_type,
 		goto error;
 	memset(obj, 0, sizeof(game_obj_t));
 
-	obj->name = alloc_string(name);
-	if (obj->name == NULL)
-		goto error;
-
 	game_obj_data_t *data = malloc(sizeof(game_obj_data_t));
 	if (data == NULL)
 		goto error;
-
 	memset(data, 0, sizeof(game_obj_data_t));
 
 	game_obj_func_t *func = NULL;
+	game_obj_data_t *update_data = NULL;
 	if (obj_type & STATIC_OBJECT) {
 		printf("%s is a static object\n", obj->name);
 	} else {
@@ -50,11 +46,39 @@ alloc_game_object(char *name, game_obj_type_t obj_type,
 		game_obj_func_t *func = malloc(sizeof(game_obj_func_t));
 		if (func == NULL)
 			goto error;
-
 		memset(func, 0, sizeof(game_obj_func_t));
+
+		/* game_obj_func */
+		/* TODO: set default functions*/
+
+
+		update_data = malloc(sizeof(game_obj_data_t));
+		if (update_data == NULL)
+			goto error;
+		memset(update_data, 0, sizeof(game_obj_data_t));
 	}
 
+	obj->name = alloc_string(name);
+	if (obj->name == NULL)
+		goto error;
+
+	obj->texture = texture;
 	obj->act_data = data;
+	obj->update_data = update_data;
+	/* TODO: set default draw_func draw */
+
+	/* game_obj_data */
+	int err = SDL_QueryTexture(texture, NULL, NULL, &obj->act_data->size.w,
+				&obj->act_data->size.h);
+	if (err < 0)
+		goto error;
+
+	obj->act_data->pos.x = x;
+	obj->act_data->pos.y = y;
+
+	obj->act_data->frame = -1;
+
+        /* game_obj_func */
 	obj->func = func;
 
 
@@ -69,6 +93,9 @@ error:
 
 	if (data != NULL)
 		free(data);
+
+	if (update_data != NULL)
+		free(update_data);
 
 	if (obj != NULL) {
 		if (obj->name != NULL)
