@@ -2,6 +2,7 @@
 # some news ... see also TODO for hints
 #
 
+2017-12-06 -> some smaller adds regarding game_object types
 
 2017-11-26 -> some rework of the init parts
 	      add some first parts for new object types
